--- a/index.html
+++ b/index.html
@@ -11,16 +11,32 @@
 <body>
 
   <!-- Header -->
-  <header class="d-flex justify-content-between align-items-center p-4">
-    <h1 class="logo m-0">SALA 7</h1>
-    <nav>
-      <ul class="nav gap-4">
-        <li class="nav-item"><a class="nav-link text-black" href="#">Galería</a></li>
-        <li class="nav-item"><a class="nav-link text-black" href="#">Info</a></li>
-        <li class="nav-item"><a class="nav-link text-black" href="#">Contacto</a></li>
+<!-- Header con navbar responsive -->
+<nav class="navbar navbar-expand-lg bg-white px-4 py-3">
+  <div class="container-fluid">
+    <a class="navbar-brand fw-bold" href="#">SALA 7</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent"
+      aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse justify-content-end" id="navbarContent">
+      <ul class="navbar-nav gap-3">
+        <li class="nav-item">
+          <a class="nav-link text-black" href="#galeria">Galería</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-black" href="#info">Info</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-black" href="#footer">Contacto</a>
+        </li>
       </ul>
-    </nav>
-  </header>
+    </div>
+  </div>
+</nav>
+
+
 
   <!-- Hero Section -->
   <section class="hero text-center py-5">
@@ -129,11 +145,11 @@
 
 
 <!-- Sección de información -->
-<section class="info-section py-5">
+<section class="info-section py-5" id="info">
   <div class="container">
-    <div class="row align-items-center">
+    <div class="row flex-column-reverse flex-md-row align-items-center">
       
-      <!-- Columna izquierda: texto descriptivo -->
+      <!-- Columna izquierda: texto descriptivo (va debajo en móvil) -->
       <div class="col-md-6 mb-4 mb-md-0">
         <p class="info-text">
           Sala 7 es un espacio dedicado al cine alternativo, donde celebramos lo no convencional.  
@@ -143,7 +159,7 @@
         <button class="btn btn-outline-dark mt-3">Leer más sobre nosotros</button>
       </div>
 
-      <!-- Columna derecha: frase con imágenes -->
+      <!-- Columna derecha: frase con imágenes (va arriba en móvil) -->
       <div class="col-md-6">
         <h2 class="info-title">
           CINE AUTÉNTICO,  
@@ -164,9 +180,9 @@
     </div>
   </div>
 
-    <hr class="galeria-separador-seccioninfo">
-
+  <hr class="galeria-separador-seccioninfo">
 </section>
+
 
 <!-- Footer -->
 <footer class="footer-section py-5 mt-5">
@@ -212,5 +228,6 @@
 
 
   <script src="js/main.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
